<resources>
    <string name="app_name">BeBettaAssignment</string>
    <string name="feed">Feed</string>
    <string name="explore">Explore\n</string>
    <string name="write">Write</string>
    <string name="like">Like</string>
    <string name="account">Account</string>
    <string name="app_logo">App logo</string>
    <string name="football">FootBall</string>
    <string name="cricket">Cricket</string>
    <string name="adding_soon">Adding Soon</string>
    <string name="live_score_icon">Live score icon</string>
    <string name="live_score">Live Score</string>
    <string name="game_icon">Game icon</string>
    <string name="espanyol">Espanyol</string>
    <string name="bet_now">BET NOW</string>
    <string name="vs">VS</string>
    <string name="country_flag">Country flag</string>
    <string name="atl_madrid">Atl. Madrid</string>
    <string name="_2">2</string>
    <string name="most_happening_tickr">🔥 Most Happening tickr</string>
    <string name="_72_min">72 min</string>
    <string name="_1">1</string>
    <string name="tickr_image">Tickr Image</string>
    <string name="username">Username</string>
    <string name="bettta_coin_image">Bettta coin image</string>
    <string name="rapid_fire">🔥 Rapid Fire</string>
    <string name="_4_questions">4 questions</string>
    <string name="leeds_utd">Leeds Utd.</string>
    <string name="liverpool">Liverpool\n</string>
    <string name="_3">3</string>
    <string name="_36_min">36 min</string>
    <string name="usab">USAB</string>
    <string name="dal">DAL</string>
    <string name="ncaff">NCAFF</string>
    <string name="madrid">Madrid</string>
    <string name="phi">PHI</string>
    <string name="question_image">Question Image</string>
    <string name="match_preview">Match Preview</string>
    <string name="view_all">View All</string>
    <string name="match_previews">Match Previews</string>
    <string name="explore_now">Explore Now</string>
    <string name="bottom_sheet_image">Bottom Sheet Image</string>
</resources>