<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bottom_nav_bg_color"
            android:paddingHorizontal="15dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/app_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/ic_wallet"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/iv_notification"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_game_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_header"
                tools:itemCount="1"
                tools:listitem="@layout/layout_game_item" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_live_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_game_list">

                <ImageView
                    android:id="@+id/iv_live_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/live_score_icon"
                    android:paddingVertical="10dp"
                    android:src="@drawable/ic_live_score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_live_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/live_score"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/iv_live_score"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_live_mach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_live_score"
                    tools:itemCount="1"
                    tools:listitem="@layout/layout_item_live_match" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_most_tickr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/most_happening_tickr"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/rv_tickr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_live_score" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tickr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_most_tickr"
                tools:itemCount="1"
                tools:listitem="@layout/layout_tickr_item" />

            <ImageView
                android:id="@+id/iv_betta_coin"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/bettta_coin_image"
                android:src="@drawable/betta_coin_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_tickr" />

            <TextView
                android:id="@+id/tv_rapid_fire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rapid_fire"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@id/iv_question"
                app:layout_constraintEnd_toStartOf="@id/tv_questions"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_betta_coin" />

            <TextView
                android:id="@+id/tv_questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_questions"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tv_rapid_fire"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_rapid_fire"
                app:layout_constraintTop_toTopOf="@id/tv_rapid_fire" />

            <ImageView
                android:id="@+id/iv_question"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.15"
                android:src="@drawable/question_1"
                android:scaleType="fitXY"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/question_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_questions"
                tools:listitem="@layout/layout_stackview_questionnaire" />

            <TextView
                android:id="@+id/tv_match_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_preview"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/tv_view_all"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_question"
                app:layout_constraintBottom_toTopOf="@id/iv_match_preview"/>

            <TextView
                android:id="@+id/tv_view_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:textSize="14sp"
                android:textColor="@color/view_all_text_color"
                app:layout_constraintBottom_toBottomOf="@id/tv_match_preview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_match_preview"
                app:layout_constraintTop_toTopOf="@id/tv_match_preview" />

            <ImageView
                android:id="@+id/iv_match_preview"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/match_preview"
                android:scaleType="fitXY"
                android:contentDescription="@string/match_previews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_match_preview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>