<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="liveMatchItem"
            type="com.example.bebettaassignment.models.LiveMatchItemModel" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/live_match_card_bg_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_live_match_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_team_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/tv_score_a"
                    app:layout_constraintEnd_toStartOf="@id/tv_vs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <ImageView
                        android:id="@+id/iv_team_a"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/country_flag"
                        android:src="@drawable/team_a"
                        sourceImage="@{liveMatchItem.firstTeamFlag}"
                        app:layout_constraintBottom_toTopOf="@id/tv_team_name_a"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tv_team_name_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={liveMatchItem.firstTeamName, default= @string/espanyol}"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_team_a" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_vs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vs"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/cl_team_a"
                    app:layout_constraintEnd_toStartOf="@id/cl_team_b"
                    app:layout_constraintStart_toEndOf="@id/cl_team_a"
                    app:layout_constraintTop_toTopOf="@id/cl_team_a" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_team_b"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="@id/cl_team_a"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_vs"
                    app:layout_constraintTop_toTopOf="@id/cl_team_a">

                    <ImageView
                        android:id="@+id/iv_team_b"
                        android:layout_width="35dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/country_flag"
                        android:src="@drawable/team_b"
                        sourceImage="@{liveMatchItem.secondTeamFlag}"
                        app:layout_constraintBottom_toTopOf="@id/tv_team_name_b"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/tv_team_name_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@={liveMatchItem.secondTeamName, default= @string/atl_madrid}"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iv_team_b" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:id="@+id/tv_score_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@={liveMatchItem.firstTeamPoint, default= @string/_2}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/cl_team_a"
                    app:layout_constraintStart_toStartOf="@id/cl_team_a"
                    app:layout_constraintTop_toBottomOf="@id/cl_team_a" />


                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="22dp"
                    android:text="@={liveMatchItem.time, default= @string/_72_min}"
                    android:textColor="#FFB800"
                    app:layout_constraintBottom_toBottomOf="@id/tv_score_a"
                    app:layout_constraintEnd_toStartOf="@+id/tv_score_b"
                    app:layout_constraintStart_toEndOf="@+id/tv_score_a"
                    app:layout_constraintTop_toTopOf="@id/tv_score_a" />

                <TextView
                    android:id="@+id/tv_score_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:text="@={liveMatchItem.secondTeamPoint, default= @string/_1}"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/tv_score_a"
                    app:layout_constraintEnd_toEndOf="@id/cl_team_b"
                    app:layout_constraintStart_toStartOf="@id/cl_team_b"
                    app:layout_constraintTop_toTopOf="@id/tv_score_a" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_bet_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bet_now_bg_color"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_live_match_info">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:text="@string/bet_now"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</layout>